--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,7 +117,7 @@ h1, h2, h3, h4, h5, h6 {
   white-space: nowrap;
   float: left;
   margin-top: -10px;
-  background: black);
+  background: black;
 }
 
 .nav-menu a {
